grammar.txt
program
	:	statements

statements
	:	statements statements
	|	ε

statement
	:	block
	:	if
	:	while
	:	expr ;

block
	:	{ statements }

if
	:	IF ( expr ) stmt

while
	:	WHILE ( expr ) stmt

expr
	:	logical {OP logical}*

logical
	:	comparison {OP comparison}*

comparison
	:	addition {OP addition}*

addition
	:	multiplication {OP multiplicatoin}*

multiplication
	:	ID
	|	NUM
	|	( expr )
